include/joltc.h

typedef uint32_t JPH_BodyID;
typedef uint32_t JPH_SubShapeID;
typedef enum JPH_SpringMode {
	JPH_SpringMode_FrequencyAndDamping = 0,
	JPH_SpringMode_StiffnessAndDamping = 1,

	_JPH_SpringMode_Count,
	_JPH_SpringMode_Force32 = 0x7FFFFFFF
} JPH_SpringMode;
typedef struct JPH_Vec3 {
	float x;
	float y;
	float z;
} JPH_Vec3;
typedef struct JPH_SpringSettings {
	JPH_SpringMode mode;
	float frequencyOrStiffness;
	float damping;
} JPH_SpringSettings;
typedef struct JPH_MotorSettings {
	JPH_SpringSettings springSettings;
	float minForceLimit;
	float maxForceLimit;
	float minTorqueLimit;
	float maxTorqueLimit;
} JPH_MotorSettings;
typedef struct JPH_SubShapeIDPair {
	JPH_BodyID     Body1ID;
	JPH_SubShapeID subShapeID1;
	JPH_BodyID     Body2ID;
	JPH_SubShapeID subShapeID2;
} JPH_SubShapeIDPair;
typedef struct JPH_BroadPhaseCastResult {
	JPH_BodyID     bodyID;
	float          fraction;
} JPH_BroadPhaseCastResult;
typedef struct JPH_RayCastResult {
	JPH_BodyID     bodyID;
	float          fraction;
	JPH_SubShapeID subShapeID2;
} JPH_RayCastResult;
typedef struct JPH_CollidePointResult {
	JPH_BodyID bodyID;
	JPH_SubShapeID subShapeID2;
} JPH_CollidePointResult;
typedef struct JPH_CollideShapeResult
{
	JPH_Vec3           contactPointOn1;
	JPH_Vec3           contactPointOn2;
	JPH_Vec3           penetrationAxis;
	float              penetrationDepth;
	JPH_SubShapeID     subShapeID1;
	JPH_SubShapeID     subShapeID2;
	JPH_BodyID         bodyID2;
} JPH_CollideShapeResult;
typedef struct JPH_CollideShapeResult               JPH_CollideShapeResult;