csbind/src/joltc.rs

#[test]
fn bindgen_test_layout_JPH_SpringSettings() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_SpringSettings> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_SpringSettings>(),
        12usize,
        concat!("Size of: ", stringify!(JPH_SpringSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_SpringSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_SpringSettings))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mode) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_SpringSettings),
            "::",
            stringify!(mode)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).frequencyOrStiffness) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_SpringSettings),
            "::",
            stringify!(frequencyOrStiffness)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).damping) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_SpringSettings),
            "::",
            stringify!(damping)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_MotorSettings {
    pub springSettings: JPH_SpringSettings,
    pub minForceLimit: f32,
    pub maxForceLimit: f32,
    pub minTorqueLimit: f32,
    pub maxTorqueLimit: f32,
}
#[test]
fn bindgen_test_layout_JPH_MotorSettings() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_MotorSettings> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_MotorSettings>(),
        28usize,
        concat!("Size of: ", stringify!(JPH_MotorSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_MotorSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_MotorSettings))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).springSettings) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_MotorSettings),
            "::",
            stringify!(springSettings)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).minForceLimit) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_MotorSettings),
            "::",
            stringify!(minForceLimit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxForceLimit) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_MotorSettings),
            "::",
            stringify!(maxForceLimit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).minTorqueLimit) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_MotorSettings),
            "::",
            stringify!(minTorqueLimit)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxTorqueLimit) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_MotorSettings),
            "::",
            stringify!(maxTorqueLimit)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_SubShapeIDPair {
    pub Body1ID: JPH_BodyID,
    pub subShapeID1: JPH_SubShapeID,
    pub Body2ID: JPH_BodyID,
    pub subShapeID2: JPH_SubShapeID,
}
#[test]
fn bindgen_test_layout_JPH_SubShapeIDPair() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_SubShapeIDPair> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_SubShapeIDPair>(),
        16usize,
        concat!("Size of: ", stringify!(JPH_SubShapeIDPair))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_SubShapeIDPair>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_SubShapeIDPair))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Body1ID) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_SubShapeIDPair),
            "::",
            stringify!(Body1ID)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).subShapeID1) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_SubShapeIDPair),
            "::",
            stringify!(subShapeID1)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).Body2ID) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_SubShapeIDPair),
            "::",
            stringify!(Body2ID)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).subShapeID2) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_SubShapeIDPair),
            "::",
            stringify!(subShapeID2)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_BroadPhaseCastResult {
    pub bodyID: JPH_BodyID,
    pub fraction: f32,
}
#[test]
fn bindgen_test_layout_JPH_BroadPhaseCastResult() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_BroadPhaseCastResult> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_BroadPhaseCastResult>(),
        8usize,
        concat!("Size of: ", stringify!(JPH_BroadPhaseCastResult))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_BroadPhaseCastResult>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_BroadPhaseCastResult))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bodyID) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_BroadPhaseCastResult),
            "::",
            stringify!(bodyID)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fraction) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_BroadPhaseCastResult),
            "::",
            stringify!(fraction)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_RayCastResult {
    pub bodyID: JPH_BodyID,
    pub fraction: f32,
    pub subShapeID2: JPH_SubShapeID,
}
#[test]
fn bindgen_test_layout_JPH_RayCastResult() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_RayCastResult> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_RayCastResult>(),
        12usize,
        concat!("Size of: ", stringify!(JPH_RayCastResult))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_RayCastResult>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_RayCastResult))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bodyID) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_RayCastResult),
            "::",
            stringify!(bodyID)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fraction) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_RayCastResult),
            "::",
            stringify!(fraction)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).subShapeID2) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_RayCastResult),
            "::",
            stringify!(subShapeID2)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_CollidePointResult {
    pub bodyID: JPH_BodyID,
    pub subShapeID2: JPH_SubShapeID,
}
#[test]
fn bindgen_test_layout_JPH_CollidePointResult() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_CollidePointResult> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_CollidePointResult>(),
        8usize,
        concat!("Size of: ", stringify!(JPH_CollidePointResult))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_CollidePointResult>(),
        4usize,
        concat!("Alignment of ", stringify!(JPH_CollidePointResult))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bodyID) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollidePointResult),
            "::",
            stringify!(bodyID)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).subShapeID2) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_CollidePointResult),
            "::",
            stringify!(subShapeID2)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_CollideShapeResult {
    pub contactPointOn1: JPH_Vec3,
    pub contactPointOn2: JPH_Vec3,
    pub penetrationAxis: JPH_Vec3,
    pub penetrationDepth: f32,
    pub subShapeID1: JPH_SubShapeID,
    pub subShapeID2: JPH_SubShapeID,
    pub bodyID2: JPH_BodyID,
}
